fix: blurred nav

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,6 +32,7 @@ header {
   z-index: 9999;
   width: 100%;
   padding: 0 var(--horizontal-spacing) 0 var(--horizontal-spacing);
+  background: hwb(0 100% 0% / 0.65);
   backdrop-filter: blur(10px);
 }
 
@@ -74,8 +75,7 @@ nav .nav-items {
 nav .nav-items a {
   text-decoration: none;
   color: black;
-  text-shadow: white 1px 0 10px;
-  /* mix-blend-mode: difference; */
+  /* text-shadow: white 1px 0 10px; */
   text-transform: uppercase;
   font-weight: 500;
   transition: 0.2s ease;
